/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.core.models";

package core;

import "core/ApplicationIdProto.proto";
import "app/ApplicationEnumsProto.proto";
import "security/PermissionProto.proto";
import "core/VersionProto.proto";

// Corresponds to org.onosproject.core.Application.
message ApplicationProto {
    core.ApplicationIdProto app_id = 1;
    core.VersionProto version = 2;
    string title = 3;
    string description = 4;
    string category = 5;
    string url = 6;
    string readme = 7;

    // tag id 8 is reserved for app icon
    reserved 8;

    string origin = 9;
    app.ApplicationRoleProto role = 10;
    repeated security.PermissionProto permissions = 11;

    // tag id 12 is reserved for features repo
    // optional type will be added later
    reserved 12;
    repeated string features = 13;
    repeated string required_apps = 14;
}